<resources>
    <string name="app_name">Ambulance</string>
    <string name="x">X</string>
    <string name="sos">SOS</string>
    <string name="drawer_open">Open navigation drawer</string>

    <string name="drawer_close">Close navigation drawer </string>

    <string name="title_activity_my_navigation">Ambulance-Tracker</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_as_driver">Login As Driver</string>
    <string name="login_as_user">Login As User</string>
    <string name="user_signup">user SignUP</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password1">Password</string>
    <string name="register">Register</string>
    <string name="driver_signup">Driver SignUP</string>
    <string name="driver_name">Driver Name</string>
    <string name="email_address1">Email Address</string>
    <string name="password3">Password</string>
    <string name="ambulance_number">Ambulance Number</string>
    <string name="registerm">Register</string>
    <string name="register_as_driver">Register As Driver</string>
    <string name="register_as_user">Register As User</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>